[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coffeetanuki"
version = "0.1.0"
description = "discover nearby specialty coffee"
dependencies = [
  "litestar @ git+https://github.com/litestar-org/litestar@main",
  "sqlalchemy",
  "geoalchemy2",
  "uvicorn",
  "pydantic[dotenv] ~= 1.10.11",
  "alembic",
  "jinja2",
  "shapely",
  "asyncpg",
]

[tool.hatch.metadata]
allow-direct-references = true
